--- a/frontend/package.json
+++ b/frontend/package.json
@@ -8,9 +8,10 @@
     "lint": "vue-cli-service lint"
   },
   "dependencies": {
-    "bootstrap": "^5.0.0",
-    "bootstrap-vue": "^2.21.2",
+    "axios": "^0.21.1",
     "core-js": "^3.6.5",
+    "primeicons": "^4.1.0",
+    "primevue": "^3.4.0",
     "vue": "^3.0.0"
   },
   "devDependencies": {
